<resources>
    <string name="app_name">MAD project</string>
    <string name="btndone">DONE</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="getwheels">GetWheels</string>
    <string name="BACKbtn">Back</string>
    <string name="editfeedback">Edit Feedback</string>
    <string name="comment1" />
    <string name="title1">User 1</string>
    <string name="givefeedback">Give Feedback</string>
    <string name="title2">Type your feedback here</string>
    <string name="title3">Rate our service here</string>
    <string name="layercontent" />
    <string name="enter_feedback_here">Enter Feedback here</string>
    <string name="feedbacktag">Feedback</string>
    <string name="usertext1">User1</string>
    <string name="usertext2">User2</string>
    <string name="feedback">Feedback</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="btn_show">SHOW</string>
    <string name="txt_Good">Good App</string>
</resources>