<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3FFCF"
    tools:context=".Pagetwo">

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btndone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="28dp"
        android:text="@string/BACKbtn"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/layercontent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upperpic"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="32dp"
        android:text="@string/welcome_user"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inika"
        android:text="@string/getwheels"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/feedback"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="351dp"
        android:layout_height="166dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/white_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="128dp"
            android:text="@string/usertext1"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txt4"
            android:layout_width="346dp"
            android:layout_height="166dp"
            android:autofillHints=""
            android:drawableTint="#FFFFFF"
            android:ems="10"
            android:foregroundTint="#FFFFFF"
            android:hint=""
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints,TextContrastCheck,DuplicateSpeakableTextCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--  <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/constraintLayout1"
          android:layout_width="321dp"
          android:layout_height="120dp"
          android:layout_marginBottom="220dp"
          android:background="@drawable/white_box"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          tools:ignore="MissingConstraints">

          <TextView
              android:id="@+id/text7"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="16dp"
              android:layout_marginBottom="80dp"
              android:text="@string/usertext2"
              android:textColor="#070707"
              android:textSize="16sp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent" />

          <EditText
              android:id="@+id/txt5"
              android:layout_width="319dp"
              android:layout_height="121dp"
              android:autofillHints=""
              android:drawableTint="#FFFFFF"
              android:ems="10"
              android:foregroundTint="#FFFFFF"
              android:hint="@string/enter_feedback_here"
              android:inputType="textPersonName"
              tools:ignore="TextContrastCheck"
              tools:layout_editor_absoluteY="1dp" />
      </androidx.constraintlayout.widget.ConstraintLayout>  -->

    <!--    <RatingBar-->
    <!--        android:id="@+id/ratingBar"-->
    <!--        android:layout_width="235dp"-->
    <!--        android:layout_height="48dp"-->
    <!--        android:layout_marginStart="90dp"-->
    <!--        android:layout_marginTop="17dp"-->
    <!--        android:layout_marginEnd="86dp"-->
    <!--        android:numStars="5"-->
    <!--        android:progressBackgroundTint="#E6E5E2"-->
    <!--        android:progressTint="#FFC107"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/txt6" />-->


</androidx.constraintlayout.widget.ConstraintLayout>